--- a/settings.json
+++ b/settings.json
@@ -1,44 +1,56 @@
 {
+  "diffEditor.experimental.useTrueInlineView": true,
+  "editor.bracketPairColorization.enabled": true,
+  "editor.cursorWidth": 1,
+  "editor.dragAndDrop": false,
+  "editor.formatOnSave": true,
+  "editor.guides.bracketPairs": true,
+  "editor.minimap.maxColumn": 80,
+  "editor.minimap.showSlider": "always",
+  "editor.renderWhitespace": "all",
+  "editor.showFoldingControls": "always",
+  "editor.tabSize": 2,
+  "explorer.compactFolders": false,
+  "files.autoSave": "afterDelay",
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
   "github.copilot.nextEditSuggestions.enabled": true,
-  "vim.foldfix": true,
-  "chat.mcp.discovery.enabled": true,
-  "chat.mcp.serverSampling": {
-    "Global in Code: backlog": {
-      "allowedModels": ["github.copilot-chat/gpt-4.1"]
-    }
-  },
-  "cSpell.userWords": [
-    "bullmq",
-    "Diezon",
-    "eccube",
-    "fflate",
-    "nodenext",
-    "opensearch",
-    "paralleldrive",
-    "pdfme",
-    "sendgrid",
-    "Sensio",
-    "Skus",
-    "trivago",
-    "Yamato",
-    "yasukekuroda"
-  ],
-  "security.promptForLocalFileProtocolHandling": false,
-  "chat.editing.confirmEditRequestRemoval": false,
-  "workbench.settings.applyToAllProfiles": [
-    "turboConsoleLog.logFunction",
-    "turboConsoleLog.insertEnclosingClass"
-  ],
-  "turboConsoleLog.addSemicolonInTheEnd": true,
-  "turboConsoleLog.insertEnclosingClass": false,
-  "workbench.editor.enablePreview": false,
-  "git.suggestSmartCommit": false,
   "gitlens.ai.model": "vscode",
   "gitlens.ai.vscode.model": "copilot:gpt-4.1",
-  "workbench.colorTheme": "Visual Studio Dark",
-  "prettier.requireConfig": true,
-  "prettier.prettierPath": "./node_modules/prettier",
-  "git.openRepositoryInParentFolders": "never",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true
+  "search.showLineNumbers": true,
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "vim.foldfix": true,
+  "workbench.colorTheme": "Default Dark+",
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.pinnedTabsOnSeparateRow": true,
+  "workbench.editor.wrapTabs": true,
+  "workbench.settings.applyToAllProfiles": [
+    "diffEditor.experimental.useTrueInlineView",
+    "editor.bracketPairColorization.enabled",
+    "editor.cursorWidth",
+    "editor.dragAndDrop",
+    "editor.formatOnSave",
+    "editor.guides.bracketPairs",
+    "editor.minimap.maxColumn",
+    "editor.minimap.showSlider",
+    "editor.renderWhitespace",
+    "editor.showFoldingControls",
+    "editor.tabSize",
+    "explorer.compactFolders",
+    "files.autoSave",
+    "files.trimFinalNewlines",
+    "files.trimTrailingWhitespace",
+    "github.copilot.nextEditSuggestions.enabled",
+    "gitlens.ai.model",
+    "gitlens.ai.vscode.model",
+    "search.showLineNumbers",
+    "terminal.integrated.cursorBlinking",
+    "terminal.integrated.cursorStyle",
+    "vim.foldfix",
+    "workbench.colorTheme",
+    "workbench.editor.enablePreview",
+    "workbench.editor.pinnedTabsOnSeparateRow",
+    "workbench.editor.wrapTabs",
+  ],
 }
