--- a/profiles/-77c30519/settings.json
+++ b/profiles/-77c30519/settings.json
@@ -49,11 +49,17 @@
   ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.wordSeparators": "`~!#$%^&*()-=+[{]}\\|;:'\",.<>/?",
+  "github.copilot.chat.languageContext.inline.typescript.enabled": true,
+  "github.copilot.chat.languageContext.typescript.enabled": true,
   "nestjs.files.skipFolderConfirmation": true,
   "notebook.showFoldingControls": "always",
   "prettier.prettierPath": "./node_modules/prettier",
   "turboConsoleLog.addSemicolonInTheEnd": true,
   "turboConsoleLog.insertEnclosingClass": false,
+  "typescript.preferences.preferTypeOnlyAutoImports": true,
+  "typescript.referencesCodeLens.enabled": true,
+  "typescript.referencesCodeLens.showOnAllFunctions": true,
+  "typescript.suggest.completeFunctionCalls": true,
   "workbench.iconTheme": "material-icon-theme",
   "search.exclude": {
     "**/*.code-search": false,
