--- a/profiles/-7574cbd9/extensions.json
+++ b/profiles/-7574cbd9/extensions.json
@@ -1,1 +1,55 @@
-[]
+[
+  {
+    "identifier": {
+      "id": "bmewburn.vscode-intelephense-client",
+      "uuid": "ffda6552-0ad5-431b-a4fa-0905a7e4f3f0"
+    },
+    "version": "1.14.4",
+    "location": {
+      "$mid": 1,
+      "path": "/Users/yasuke_kuroda/.vscode/extensions/bmewburn.vscode-intelephense-client-1.14.4",
+      "scheme": "file"
+    },
+    "relativeLocation": "bmewburn.vscode-intelephense-client-1.14.4",
+    "metadata": {
+      "installedTimestamp": 1760092607763,
+      "pinned": false,
+      "source": "gallery",
+      "id": "ffda6552-0ad5-431b-a4fa-0905a7e4f3f0",
+      "publisherId": "3209eeb0-2b1a-4484-8c83-2627b29db88e",
+      "publisherDisplayName": "Ben Mewburn",
+      "targetPlatform": "undefined",
+      "updated": false,
+      "private": false,
+      "isPreReleaseVersion": false,
+      "hasPreReleaseVersion": false
+    }
+  },
+  {
+    "identifier": {
+      "id": "mblode.twig-language-2"
+    },
+    "version": "0.9.4",
+    "location": {
+      "$mid": 1,
+      "fsPath": "/Users/yasuke_kuroda/.vscode/extensions/mblode.twig-language-2-0.9.4",
+      "external": "file:///Users/yasuke_kuroda/.vscode/extensions/mblode.twig-language-2-0.9.4",
+      "path": "/Users/yasuke_kuroda/.vscode/extensions/mblode.twig-language-2-0.9.4",
+      "scheme": "file"
+    },
+    "relativeLocation": "mblode.twig-language-2-0.9.4",
+    "metadata": {
+      "installedTimestamp": 1760092670846,
+      "pinned": false,
+      "source": "gallery",
+      "id": "bfcc4184-7b55-410e-a012-20ee54be9264",
+      "publisherId": "74a8f70d-25a2-4075-b9bf-93b73e0439f6",
+      "publisherDisplayName": "mblode",
+      "targetPlatform": "undefined",
+      "updated": false,
+      "private": false,
+      "isPreReleaseVersion": false,
+      "hasPreReleaseVersion": false
+    }
+  }
+]
