--- a/profiles/-7574cbd9/settings.json
+++ b/profiles/-7574cbd9/settings.json
@@ -1,3 +1,4 @@
 {
-  "editor.wordSeparators": "`~!#%^&*()-=+[{]}\\|;:,.<>/?"
+  "editor.wordSeparators": "`~!#%^&*()-=+[{]}\\|;:,.<>/?",
+  "editor.formatOnSave": false
 }
