--- a/profiles/-59647a74/settings.json
+++ b/profiles/-59647a74/settings.json
@@ -1,60 +1,37 @@
 {
   "cSpell.userWords": [
-    "Applieds",
-    "Applyable",
-    "Approveds",
-    "autoincrement",
+    "Balazs",
     "bullmq",
-    "commnad",
-    "cuid",
-    "dbgenerated",
+    "Delba",
     "Diezon",
     "Dtos",
     "eccube",
     "esbenp",
-    "extrac",
-    "Favicons",
     "fflate",
     "foldfix",
-    "GIRAFULL",
-    "kuroda",
-    "MILI",
+    "ILIKE",
+    "Lusitana",
     "nodenext",
     "Noto",
-    "olta",
+    "Novotny",
+    "oliveira",
     "opensearch",
-    "paginted",
+    "Orban",
     "Paidy",
     "paralleldrive",
     "pdfme",
     "POINTUP",
-    "Regext",
-    "Rejecteds",
     "sendgrid",
     "Sensio",
-    "shippping",
-    "Shoid",
-    "Showns",
     "Skus",
-    "soldout",
-    "stockable",
-    "Stockl",
-    "stockout",
-    "Streamable",
-    "Succesor",
-    "Takeru",
     "trivago",
-    "withdrawed",
+    "turbopack",
     "Yamato",
-    "yasukekuroda",
-    "yayoi",
-    "YUUCHO"
+    "yasukekuroda"
   ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.wordSeparators": "`~!#$%^&*()-=+[{]}\\|;:'\",.<>/?",
   "github.copilot.chat.languageContext.inline.typescript.enabled": true,
   "github.copilot.chat.languageContext.typescript.enabled": true,
-  "nestjs.files.skipFolderConfirmation": true,
   "notebook.showFoldingControls": "always",
   "prettier.prettierPath": "./node_modules/prettier",
   "turboConsoleLog.addSemicolonInTheEnd": true,
@@ -71,4 +48,5 @@
     "dist/**": true,
     "node_modules/**": true
   },
+  "explorer.confirmDragAndDrop": false
 }
